FILE(GLOB SRC *.cpp *.h)
SET(EXE_NAME einherid)

# Make beautiful folder in visual studio
GROUP_FILES()
REQUIRE_LIB(SFML)
INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIRS})

ADD_EXECUTABLE(${EXE_NAME} ${SRC})

TARGET_LINK_LIBRARIES(${EXE_NAME} einheri-server)
TARGET_LINK_LIBRARIES(${EXE_NAME} einheri-commun)
TARGET_LINK_LIBRARIES(${EXE_NAME} ${SFML_LIBRARIES})

IF(APPLE)
	TARGET_LINK_LIBRARIES(${EXE_NAME} "-framework Accelerate")
ENDIF(APPLE)
