
### Add externals dependancies
FIND_PACKAGE(Boost COMPONENTS unit_test_framework)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

FOREACH(TEST_CPP_FILES 
			file.cpp
		)

  STRING(REPLACE ".cpp" "" TEST_EXE_NAME ${TEST_CPP_FILES})
  ADD_EXECUTABLE(${TEST_EXE_NAME} ${TEST_CPP_FILES})
  ADD_TEST(${TEST_EXE_NAME} ${CMAKE_CURRENT_BINARY_DIR}/${TEST_EXE_NAME} "--log_level=test_suite")

  # Link
  TARGET_LINK_LIBRARIES(${TEST_EXE_NAME} core)
  TARGET_LINK_LIBRARIES(${TEST_EXE_NAME} ${Boost_LIBRARIES})

ENDFOREACH(TEST_CPP_FILES)
